# mini_naive

./: README.md
src/: BUILD.gn  build-with-clang.sh  build-with-gcc.sh
src/base/: BUILD.gn
src/components/version_info/: BUILD.gn
src/crypto/: BUILD.gn
src/net/: BUILD.gn
src/net/socket/: client_socket_pool_manager.cc
src/net/tools/naive/: naive_client.cc  naive_client_bin.cc  naive_client_connection.cc  naive_client_connection.h  socks5_server_socket.h
src/url/: BUILD.gn
tools/: exclude.txt  import-upstream.sh  include.txt
